# mana-lang-1

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
mana-lang/: CMakeLists.txt  mana-lang.h  test_module.cpp
parse_input/: main.mana
src/: build_test.hpp  constants.hpp  main.cpp  mana-lang.cpp  test_module.h  util.hpp
src/ast/: listener.cpp  listener.hpp
src/grammar/: Mana.g4  ManaOld.g4  example_lexer.g4bak  example_parser.g4bak
src/nyx/: lexer.cpp  lexer.hpp  mana.g4
src/parser/: Mana.tokens  ManaBaseListener.cpp  ManaBaseListener.h  ManaBaseVisitor.cpp  ManaBaseVisitor.h  ManaLexer.cpp  ManaLexer.h  ManaLexer.tokens  ManaListener.cpp  ManaListener.h  ManaParser.cpp  ManaParser.h  ManaVisitor.cpp  ManaVisitor.h  manaBaseVisitor.cpp  manaBaseVisitor.h  manaLexer.cpp  manaLexer.h  manaParser.cpp  manaParser.h  manaVisitor.cpp  manaVisitor.h
src/parser/grammar/: Mana.g4  mana.g4
src/parser/grammar/.antlr/: Mana.interp  ManaLexer.interp  mana.interp  manaLexer.interp
test/: main.mana  unit2.mana  unit3.mana
